# claudit

./: .gitignore  LICENSE  README.md  claudit.py  pyproject.toml
commands/: claudit.md
